compile with unicode cards

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-https://en.wikipedia.org/wiki/Playing_cards_in_Unicode
+doc de ini dentro del source de bjinit.c
 
 be able to use a non-gsl rng
 readline autocomplete
