--- a/TODO
+++ b/TODO
@@ -1,73 +1,65 @@
-change name and move to savannah
-manual -> texinfo
+ * have different dealers for different game variations (spanish 21, 
+ * different colors in interactive output for actual commands and information
+ * verbose dealer/quiet dealer
+ * motivation
+    - show that there is no flaw in the basic strategy
+    - check changes in strategy
+    - AI for beating the dealer
+    - switch casinos to free software
+ * first qurstions: 1. how to play? 2. what is the ev? p41 griffin opt
+ * mimic the dealer -5.5% single s17
+ * referencess in griffin chapter 2 to blackjack history
+ * definition of bs p42
+ * thorp wiki/page
+ * remove cards from deck
+ * +10 par de 5, 12 hard 12, -12 par de aces
+ * eric farmer
+ * shared-object player
+ * bankroll history, group by 10, 100, 1000, etc
+ * betting systems, positive, negative, martingale fibonacci
+ * kelly when ev is pos
+ * analizar martingale, bankroll needed to avoid ruin 90% and 95% of the times
+ * impossibilty of gambling systems, von mises
+ * model shuffle master
+ * re-computed results from the wizard
+ * martingale and positive progression
+ * basic strategy vs horrible player at the same time
+ * websockets ux con sini
+ * tournaments hacer torneos
+ * be able to use a non-gsl rng
+ * readline autocomplete
+ * check there is only one stdout player
+ * detailed commands (reduces speed but allows to count cards)
+ * conf
+    - bankroll_history_file_path
+    - removed_cards
+    - ENHC
+    - counts = reko hi-lo
+    - timeout = (for pipes or sockets)
+    - [reko]
+        - A = -1
+        - 2 = +1
+        - ...
+ * guile?
+ * unix sockets?
+ * dbus?
 
 
-verbose dealer/quiet dealer
-motivation: bs flaw, check changes in strategy, AI for beating the dealer, switch casinos to free sw
-first qurstions: 1. how to play? 2. what is the ev? p41 griffin opt
-mimic the dealer -5.5% single s17
-referencias en griffin chapter 2 a historia de bs
-definition of bs p42
-thorp wiki/page
-remove cards from deck
-+10 par de 5, 12 hard 12, -12 par de aces
-eric farmer
-https://www.qfit.com/book/ModernBlackjackPage68.htm
-markdowns de players
-basic strategy
-https://www.qfit.com/book/ModernBlackjackPage44.htm
-shared-object player
-bankroll history, group by 10, 100, 1000, etc
-betting systems, positive, negatice, martingale fibonacci
-kelly when ev is pos
-histograma de ev cada 100 manos
-analizar martingala, bankroll para no arruinarse el 90% y 95% de las veces
-impossibilty of gambling systems, von mises
-modelar shuffle master
-https://www.beatblackjack.org/en/simulate/
-https://www.blackjackinfo.com/free-blackjack-combinatorial-analyzer/
-http://www.blackjack-scams.com/html/prog__systems.html
-https://curlie.org/Games/Gambling/Blackjack
-https://www.blackjackincolor.com/
-https://www.blackjackinfo.com/
-https://www.gnu.org/help/evaluation.html 
-re-calcular resultados del wizard
-https://github.com/imneme/pcg-c
-martingale and positive progression
-https://wizardofodds.com/gambling/betting-systems/cancellation/appendix/
-basic strategy vs horrible player
-split eights http://centronsoftware.com/john_patrick/tips.asp?id=10
-http://centronsoftware.com/john_patrick/tips.asp?id=9
-websockets ux con sini
-hacer torneos
+## Links 
 
+ * https://www.qfit.com/book/ModernBlackjackPage44.htm
+ * https://www.qfit.com/book/ModernBlackjackPage68.htm
+ * https://www.beatblackjack.org/en/simulate/
+ * https://www.blackjackinfo.com/free-blackjack-combinatorial-analyzer/
+ * http://www.blackjack-scams.com/html/prog__systems.html
+ * https://curlie.org/Games/Gambling/Blackjack
+ * https://www.blackjackincolor.com/
+ * https://www.blackjackinfo.com/
+ * https://www.gnu.org/help/evaluation.html 
+ * https://github.com/imneme/pcg-c
+ * https://wizardofodds.com/gambling/betting-systems/cancellation/appendix/
+ * split eights http://centronsoftware.com/john_patrick/tips.asp?id=10
+ * http://centronsoftware.com/john_patrick/tips.asp?id=9
+ * http://mikefarah.github.io/yq/
+ * https://gist.github.com/pkuczynski/8665367
 
-doc de ini dentro del source de bjinit.c
-http://mikefarah.github.io/yq/
-https://gist.github.com/pkuczynski/8665367
-
-be able to use a non-gsl rng
-readline autocomplete
-check there is only one stdout player
-
-detailed commands (reduces speed but allows to count cards)
-
-ini:
-bankroll_history_file_path
-removed_cards
-enhc
-counts = reko hi-lo
-timeout = (para pipes o sockets)
-
-[reko]
-A = -1
-2 = +1
-...
-
-
-[name1]
-dealer2player = so routine_name /  mq mq_name / tcp host socket
-python
-guile
-unix sockets?
-dbus?
